--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,16 +1,64 @@
 <section class="signup-form">
-  <form fxLayout="column" fx fxLayoutAlign="center center">
+  <form fxLayout="column" fx fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)" >
     <mat-form-field appearance="outline">
       <mat-label>
         Your email
       </mat-label>
-      <input type="email" matInput>   
+      <mat-error *ngIf="emailInput.value?.length === 0; else elseTemplate">
+        Can't be empty
+      </mat-error>
+      <ng-template #elseTemplate>
+        <mat-error>
+          Please enter a valid email
+        </mat-error>
+      </ng-template> 
+      <input 
+        type="email" 
+        matInput 
+        ngModel 
+        name="email"
+        email
+        required
+        #emailInput="ngModel">   
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" hintLabel="Must contain at least 6 characters">
       <mat-label>
         Your password
       </mat-label>
-      <input type="password" matInput>   
+      <mat-error>
+        Enter a valid password
+      </mat-error>
+      <input 
+        type="password" 
+        matInput 
+        ngModel 
+        name="password"
+        required
+        minlength="6"
+        #password="ngModel"
+        >
+      <mat-hint align="end" [ngStyle]="{'color': password.value?.length >= 6 ? 'green' : 'red' }">
+        {{ password.value?.length }} / 6
+      </mat-hint>   
     </mat-form-field>
+    <mat-form-field style="margin-top: 5px" appearance="outline">
+      <mat-label>
+          Your birthday
+      </mat-label>
+      <input 
+        matInput 
+        [matDatepicker]="picker"
+        ngModel
+        name="bdate"
+        [max]="maxDate"
+        required
+        >
+      <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-checkbox ngModel name="terms" required color="primary">
+      Agree to Terms and Conditions
+    </mat-checkbox>
+    <button type="submit" mat-raised-button color="primary"  style="margin-top: 15px" [disabled]="f.invalid">Submit</button>
   </form>
 </section>
